Fix: header alignment left/right, fix intro hidden behind fixed header

--- a/src/Components/portfolio/styles/Header.css
+++ b/src/Components/portfolio/styles/Header.css
@@ -3,27 +3,29 @@
 }
 
 .portfolio-header-wrapper {
-    justify-content: space-around;
+    justify-content: space-between;
     position: fixed;
     top: 0;
     width: 100%;
     background-color: #FFF;
-    padding: 1vw 0;
+    padding: 1vw 4vw;
     z-index: 1000;
-    padding-right: 10vw;
     box-shadow: 0 1px 10px #e5e6e7;
     align-items: center;
+    box-sizing: border-box;
 }
 
 .portfolio-header-nav-wrapper {
-    width: 35%;
-    justify-content: space-between;
+    width: auto;
+    justify-content: flex-end;
+    gap: 2vw;
 }
 
 .portfolio-header-name-wrapper {
     align-items: center;
-    width: 15%;
-    justify-content: space-between;
+    width: auto;
+    gap: 1vw;
+    justify-content: flex-start;
 }
 
 .portfolio-header-name-wrapper > img {
